[#1] Added and setup doctrine fixtures from config

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "zendframework/zendframework": "2.2.*",
         "doctrine/doctrine-module": "0.*",
         "doctrine/doctrine-orm-module": "0.*",
+        "hounddog/doctrine-data-fixture-module": "0.*",
         "zendframework/zftool": "dev-master"
     },
     "require-dev": {
