--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "doctrine/doctrine-module": "0.*",
         "doctrine/doctrine-orm-module": "0.*",
         "hounddog/doctrine-data-fixture-module": "0.*",
-        "zendframework/zftool": "dev-master"
+        "zendframework/zftool": "dev-master",
+        "mwillbanks/zfc-twitter-bootstrap": "0.3.0"
     },
     "require-dev": {
         "zendframework/zend-developer-tools": "dev-master"
