[#8] Moved js libraries to composer

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "doctrine/doctrine-orm-module": "0.*",
         "hounddog/doctrine-data-fixture-module": "0.*",
         "zendframework/zftool": "dev-master",
-        "mwillbanks/zfc-twitter-bootstrap": "0.3.0"
+        "components/jquery": "1.10.*",
+        "components/bootstrap": "3.*",
+        "components/bootstrap-default": "3.*",
+        "components/font-awesome": "4.*"
     },
     "require-dev": {
         "zendframework/zend-developer-tools": "dev-master"
