--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "components/jquery": "1.10.*",
         "components/bootstrap": "3.*",
         "components/bootstrap-default": "3.*",
-        "components/font-awesome": "4.*"
+        "components/font-awesome": "4.*",
+        "zf-commons/zfc-user-doctrine-orm": "dev-master"
     },
     "require-dev": {
         "zendframework/zend-developer-tools": "dev-master",
-        "phpunit/phpunit": "3.7.*",
-        "satooshi/php-coveralls": "dev-master"
+        "phpunit/phpunit": "3.7.*"
     }
 }
