--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
     "require-dev": {
         "zendframework/zend-developer-tools": "dev-master",
         "zendframework/zftool": "dev-master",
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "3.7.*",
+        "behat/behat": "3.0.*",
+        "squizlabs/php_codesniffer": "1.5.*",
+        "phpmd/phpmd": "2.1.*"
     }
 }
