--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for ZF2",
-    "license": "BSD-3-Clause",
+    "name": "newage/zf2-extend",
+    "description": "ZendFramework2 skeleton application + Doctrine + other libraries",
+    "license": "MIT",
     "keywords": [
         "framework",
         "zf2"
     ],
-    "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "2.3.*",
