--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "phpunit/phpunit": "3.7.*",
         "behat/behat": "3.0.*",
         "squizlabs/php_codesniffer": "1.5.*",
-        "phpmd/phpmd": "2.1.*"
+        "phpmd/phpmd": "2.1.*",
+        "theseer/phpdox": "0.*"
     }
 }
