--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "zendframework/zend-developer-tools": "dev-master",
         "zendframework/zftool": "dev-master",
         "phpunit/phpunit": "3.7.*",
+        "mockery/mockery": "dev-master",
         "behat/behat": "3.0.*",
         "squizlabs/php_codesniffer": "1.5.*",
         "phpmd/phpmd": "2.1.*",
