[#21] Added test environment and added new mysql schema

--- a/behat.yml
+++ b/behat.yml
@@ -4,6 +4,7 @@ default:
             contexts:
                 - Behat\MinkExtension\Context\MinkContext
                 - BDD\Context\User\LoginContext
+                - Core\Behat\ResourceContext
             filters:
                 tags: "@user"
 
