[#22][#21] Setup phpspec and behat for a module

--- a/behat.yml
+++ b/behat.yml
@@ -3,7 +3,7 @@ default:
         user:
             contexts:
                 - Behat\MinkExtension\Context\MinkContext
-                - BDD\Context\User\LoginContext
+                - User\Behat\LoginContext
                 - Core\Behat\ResourceContext
             filters:
                 tags: "@user"
