--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=5.5",
-        "zendframework/zendframework": "2.4.*",
-        "doctrine/doctrine-module": "0.*",
+        "zendframework/zendframework": "2.5.*",
+        "doctrine/doctrine-module": "~1",
         "doctrine/doctrine-orm-module": "0.*",
         "hounddog/doctrine-data-fixture-module": "0.*",
         "components/jquery": "1.10.*",
@@ -24,8 +24,8 @@
         "zendframework/zend-developer-tools":   "dev-master",
         "zendframework/zftool":                 "dev-master",
         "phpunit/phpunit":                      "~4.1",
-        "squizlabs/php_codesniffer":            "1.5.*",
-        "phpmd/phpmd":                          "2.1.*",
+        "squizlabs/php_codesniffer":            "2.5.*",
+        "phpmd/phpmd":                          "2.4.*",
         "theseer/phpdox":                       "0.*",
         "phing/phing":                          "2.*",
         "behat/behat":                          "~3.0",
@@ -33,14 +33,12 @@
         "behat/mink-selenium2-driver":          "~1.2",
         "behat/mink-goutte-driver":             "~1.1",
         "behat/mink":                           "~1.6",
-        "phpspec/phpspec":                      "~2.0",
-        "codeception/codeception":              "*"
+        "phpspec/phpspec":                      "~2.5",
+        "codeception/codeception":              "~2.1"
     },
     "autoload": {
-        "psr-0": {
-            "Core\\": "library/"
-        },
         "psr-4": {
+            "Core\\": "library/",
             "User\\Behat\\": "module/User/bundle/behat",
             "User\\": "module/User/src/"
         }
